[gd_scene load_steps=9 format=3 uid="uid://b28kmre3vi0nv"]

[ext_resource type="Script" uid="uid://dfrjteh8ydsrl" path="res://Scripts/falling_platform.gd" id="1_0qgxb"]
[ext_resource type="Texture2D" uid="uid://blqfpnm080m8s" path="res://Assets/Sprites/objects_spritesheet.png" id="1_xbqg6"]
[ext_resource type="AudioStream" uid="uid://dpa7bb48i14hi" path="res://Assets/SFXs/platform_shaking.wav" id="3_po57x"]

[sub_resource type="Animation" id="Animation_0qgxb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatableBody2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatableBody2D/Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_xbqg6"]
resource_name = "fall"
length = 0.5
step = 0.3333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatableBody2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 20), Vector2(0, 45), Vector2(0, 80), Vector2(0, 120)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatableBody2D/Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.75), Color(1, 1, 1, 0.5), Color(1, 1, 1, 0.75), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0qgxb"]
_data = {
&"RESET": SubResource("Animation_0qgxb"),
&"fall": SubResource("Animation_xbqg6")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_po57x"]
size = Vector2(43, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0qgxb"]
size = Vector2(48, 16)

[node name="FallingPlatform" type="Node2D"]
script = ExtResource("1_0qgxb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0qgxb")
}

[node name="FallTriggerArea" type="Area2D" parent="."]
position = Vector2(0, -19)

[node name="CollisionShape2D" type="CollisionShape2D" parent="FallTriggerArea"]
position = Vector2(0, 8.5)
shape = SubResource("RectangleShape2D_po57x")

[node name="AnimatableBody2D" type="AnimatableBody2D" parent="."]
collision_layer = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatableBody2D"]
shape = SubResource("RectangleShape2D_0qgxb")

[node name="Sprite2D" type="Sprite2D" parent="AnimatableBody2D"]
texture = ExtResource("1_xbqg6")
region_enabled = true
region_rect = Rect2(0, 112, 48, 16)

[node name="ShakingAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_po57x")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="FallTriggerArea" to="." method="_on_fall_trigger_area_body_entered"]
